--- a/index.html
+++ b/index.html
@@ -7,11 +7,26 @@
 	<title>phpMyAI</title>
 </head>
 <body class="bg-gray-300">
-<div class="max-w-sm lg:max-w-lg mx-auto rounded m-12 h-32 bg-white border-t-6 border-indigo-600">
-	<p class="p-6">
-		<?php include('./app.php'); ?>	
-	</p>
+<form method="POST" action="/">
+<div class="max-w-sm lg:max-w-lg mx-auto rounded m-12 bg-white border-t-8 border-pink-400 p-6">
+	<div class="prompt-container">
+		<h2 class="font-semibold text-2xl">Prompt:</h2>
+		<p class="w-3/4 py-3">
+			<?= file_get_contents('./src/prompt.txt'); ?>
+		</p>
+	</div>
+	<div class="ai-container max-w-sm lg:max-w-lg mx-auto">
+		<h2 class="font-semibold text-2xl">AI answer:</h2>
+		<p class="completions py-3">
+			<?php include('./app.php'); ?>	
+		</p>
+	</div>
 </div>
+<div class="max-w-sm lg:max-w-lg mx-auto">
+	<input type="submit" value="Send" class="rounded py-3 hover:bg-pink-800 px-6 bg-pink-600 text-white font-semibold">
+</div>
+</form>
+
 
 </body>
 </html>
